--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,83 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: 'Basis Grotesque Pro', sans-serif;
+  background-color: #f9f9f9;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.container {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background: #000;
+  overflow: hidden;
+}
+
+nav {
+  position: fixed;
+  width: 100%;
+  padding: 2em;
+  display: flex;
+  align-items: center;
+  z-index: 2;
+}
+
+nav p,
+footer p {
+  color: #fff;
+  font-size: 12px;
+}
+
+nav > div {
+  flex: 1;
+}
+
+.menu-btn p {
+  width: max-content;
+  background: rgba(255,255,255,0.1);
+  border-radius: 40px;
+  backdrop-filter: blur(20px);
+  padding: 6px 12px;
+}
+
+
+.logo {
+  display: flex;
+  justify-content: center;
+}
+
+.local-time {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.logo a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding: 2em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 2;
 }
