added images from unsplash

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
 
 body {
   font-family: 'Basis Grotesque Pro', sans-serif;
-  background-color: #333;
+  /* background-color: #333; */
 }
 
 img {
@@ -115,3 +115,188 @@ footer {
   background: none;
   border: 1px solid rgba(255, 255, 255, 0.25);
 }
+
+
+.preview {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+  color: #fff;
+}
+
+.preview-bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0.35;
+}
+
+.preview-title h1 {
+  font-weight: lighter;
+  font-size: 80px;
+}
+
+.preview-tags p, .preview-description p {
+  font-size: 14px;
+  line-height: 120%;
+}
+
+
+/* Variant 1 */
+.preview.variant-1 .preview-img {
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
+  margin: 2em;
+  width: 300px;
+  height: 400px;
+  clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
+}
+
+.preview.variant-1 .preview-title {
+  position: absolute;
+  top: 35%;
+  left: 25%;
+}
+
+.preview.variant-1 .preview-tags {
+  position: absolute;
+  bottom: 25%;
+  right: 40%;
+}
+
+.preview.variant-1 .preview-description {
+  width: 250px;
+  position: absolute;
+  right: 25%;
+  top: 25%;
+}
+
+
+/* Variant 1 */
+.preview.variant-1 .preview-img {
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
+  margin: 2em;
+  width: 300px;
+  height: 400px;
+  clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
+}
+
+.preview.variant-1 .preview-title {
+  position: absolute;
+  top: 35%;
+  left: 25%;
+}
+
+.preview.variant-1 .preview-tags {
+  position: absolute;
+  bottom: 25%;
+  right: 40%;
+}
+
+.preview.variant-1 .preview-description {
+  width: 250px;
+  position: absolute;
+  right: 25%;
+  top: 25%;
+}
+
+
+/* Variant 1 */
+.preview.variant-1 .preview-img {
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
+  margin: 2em;
+  width: 300px;
+  height: 400px;
+  clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
+}
+
+.preview.variant-1 .preview-title {
+  position: absolute;
+  top: 35%;
+  left: 25%;
+}
+
+.preview.variant-1 .preview-tags {
+  position: absolute;
+  bottom: 25%;
+  right: 40%;
+}
+
+.preview.variant-1 .preview-description {
+  width: 250px;
+  position: absolute;
+  right: 25%;
+  top: 25%;
+}
+
+
+
+/* Variant 1 */
+.preview.variant-2 .preview-img {
+  position: absolute;
+  top: 10%;
+  right: 5%;
+  margin: 2em;
+  width: 300px;
+  height: 400px;
+  clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+}
+
+.preview.variant-2 .preview-title {
+  position: absolute;
+  bottom: 30%;
+  left: 50%;
+}
+
+.preview.variant-2 .preview-tags {
+  position: absolute;
+  top: 25%;
+  left: 25%;
+}
+
+
+.preview.variant-2 .preview-description {
+  width: 250px;
+  position: absolute;
+  right: 10%;
+  bottom: 15%;
+}
+
+
+
+/* Variant 3 */
+.preview.variant-3 .preview-img {
+  position: absolute;
+  bottom: 10%;
+  left: 15%;
+  margin: 2em;
+  width: 300px;
+  height: 400px;
+  clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+}
+
+.preview.variant-3 .preview-title {
+  position: absolute;
+  bottom: 40%;
+  right: 15%;
+}
+
+.preview.variant-3 .preview-tags {
+  position: absolute;
+  bottom: 20%;
+  right: 30%;
+}
+
+.preview.variant-3 .preview-description {
+  width: 250px;
+  position: absolute;
+  left: 20%;
+  top: 15%;
+}
+
