--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
 
 body {
   font-family: 'Basis Grotesque Pro', sans-serif;
-  /* background-color: #333; */
+  background: #000;
 }
 
 img {
@@ -19,13 +19,6 @@ img {
   object-fit: cover;
 }
 
-.container {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  background: #000;
-  overflow: hidden;
-}
 
 nav {
   position: fixed;
@@ -131,6 +124,7 @@ footer {
   height: 100vh;
   z-index: 1;
   color: #fff;
+  opacity: 0.5;
 }
 .preview-title h1 {
   font-weight: 300;
